# query-tuner-tool-

./: .editorconfig  .gitignore  BUG_DETECTION_PAGE_READY.md  CHANGELOG.md  DEADLOCKS_PAGE_READY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOY_BACKEND_RAILWAY.md  DEPLOY_FRONTEND_VERCEL.md  LANDING_PAGE_READY.md  LICENSE  MOCK_DATA_TESTING.md  ORACLE_CONNECTION_GUIDE.md  PERFORMANCE_REPORTS_PAGE_READY.md  PROJECT_MANAGER.md  PROJECT_STATUS.md  QUERY_DETAIL_PAGE_READY.md  RAILWAY_ENV_SETUP.md  RAILWAY_TROUBLESHOOTING.md  README.md  ROADMAP.md  SECURITY.md  TESTING_GUIDE.md  WAIT_EVENTS_PAGE_READY.md  build-production.sh  deploy-to-vercel.sh  start-dev.sh  stop-dev.sh  update-railway-url.sh
.claude/: settings.local.json
backend/: .env.example  .railwayignore  Dockerfile  README.md  README.railway.md  pyproject.toml  pytest.ini  query_tuner_app.db  requirements-railway.txt  requirements.txt  setup.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/v1/: auth.py  awr_ash.py  bugs.py  connections.py  deadlocks.py  execution_plans.py  health.py  plan_comparison.py  queries.py  recommendations.py  router.py  user_connections.py  wait_events.py
backend/app/api/websocket/: monitoring.py
backend/app/core/: deps.py  security.py
backend/app/core/analysis/: __init__.py  ash_analyzer.py  awr_report_generator.py  bug_detector.py  historical_comparator.py  plan_comparator.py  recommendation_engine.py
backend/app/core/cache/: __init__.py  redis_cache.py
backend/app/core/oracle/: __init__.py  alert_log.py  awr_ash.py  bug_patterns.py  connection.py  deadlocks.py  execution_plans.py  queries.py  statistics.py  system_views.py  wait_events.py
backend/app/core/websocket/: base.py  connection_manager.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/schemas/: auth.py  awr_ash.py  bug.py  execution_plan.py  oracle_connection.py  plan_comparison.py  query.py  recommendation.py  wait_event.py
backend/app/services/: auth_service.py  awr_ash_service.py  bug_detection_service.py  execution_plan_service.py  mock_data_service.py  oracle_connection_service.py  plan_comparison_service.py  query_service.py  recommendation_service.py  resource_usage_service.py  wait_event_service.py
backend/requirements/: base.txt  dev.txt  prod.txt  test.txt
backend/tests/: README.md  conftest.py  test_plan_comparator.py  test_plan_comparison_api.py  test_recommendation_engine.py
backend/tests/integration/: test_awr_ash_api.py  test_bugs_api.py  test_websocket.py
backend/tests/integration/api/: test_execution_plans_api.py  test_queries_api.py
backend/tests/unit/: test_awr_ash.py  test_bug_detector.py  test_connection.py
backend/tests/unit/core/: test_redis_cache.py
backend/tests/unit/services/: test_execution_plan_service.py  test_query_service.py
frontend/: .env.development  .env.example  .env.production  .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
standards/: API_DESIGN_STANDARDS.md  CODE_REVIEW_CHECKLIST.md  DATABASE_STANDARDS.md  ERROR_HANDLING.md  GIT_WORKFLOW.md  NAMING_CONVENTIONS.md  PYTHON_STYLE_GUIDE.md  README.md  SECURITY_STANDARDS.md  (+2 more)
(+72 files in other folders)
